fix border being cut off

--- a/src/renderer/pages/home/overview/content_block/content_block.module.css
+++ b/src/renderer/pages/home/overview/content_block/content_block.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  box-sizing: border-box;
   border-style: solid;
   border-width: 1px;
   border-color: rgb(159 116 192 / 10%);
